<resources>
    <string name="app_name" translatable="false">My Random Pony</string>
    <string name="settings_internet_warn">Enabled, but your network connection is unavailable</string>
    <string name="settings_load_error">Your network connection is unavailable or \"WiFi only\" mode is enabled</string>
    <string name="settings_progress_msg">Wait…</string>
    <string name="settings_progress_title_downloading">Downloading</string>
    <string name="settings_progress_title_saving">Saving</string>
    <string name="settings_enable">Enabled</string>
    <string name="settings_next_image">Next</string>
    <string name="settings_only_mobile">Mobile screen resolution only</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="frequency_changing">Frequency of changing</string>
    <string name="frequency_once_a_day">once a day</string>
    <string name="frequency_once_a_week">once a week</string>
    <string name="frequency_once_a_month">once a month</string>


    <string name="image">Image</string>
    <string name="settings_preview">Preview</string>
    <string name="settings_preview_setbackground">Background has been changed</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="settings_update_error">Website cannot be reached</string>
    <string name="settings_download_error">Downloading error</string>
    <string name="settings_cancel_image">Cancel</string>
    <string name="settings_edit_image">Edit</string>
    <string name="settings_image_cancel1">No edited image</string>
    <string name="settings_image_cancel2">Cancel: unknown error</string>
    <string name="settings_image_edit">Editing</string>
    <string name="settings_wifi_only">WiFi only</string>
    <string name="hint_edit_first_click">No image. To download, click \"Next\"</string>
    <string name="hint_first_edit_text">After editing, click on the resulting image again to set it as the background.\n\nReturn to the original image - press \"Cancel\".</string>
    <string name="hint_first_next_alert_msg">If you like the image, click on it to set it as the background!\n\nTo resize or crop, press \"Edit\", return to the original image - press \"Cancel\".</string>
    <string name="hint_first_launch_alert_title">Hi!</string>
    <string name="hint_first_launch_alert_msg">You can set a new background right now by clicking on the \"Next\" button, or check the box \"Enabled\" and wait for a new day!\n\nIf you have any questions, look in the \"Help\"!</string>
    <string name="activity_help_title">Help</string>
    <string name="help_text">
        <![CDATA[
        <h2>Get started</h2>

        When you first launch the application, you must enable it by clicking on the <b>Enabled</b> button, and the application will start working in the background. That\'s it!<br/>
        If you are impatient and you want to change the wallpaper right now, click on the <b>Next</b> button, wait for the image to load, and then click on it to set it as a background.<br/>

        <h2>Main screen</h2>

        <h3>Enabled</h3>
        Enabling / disabling the wallpaper change.

        <h3>Frequency of changing</h3>
        Allows you to choose the frequency of changing the wallpaper:
        <ul>
            <li><b>once a day</b>: the wallpaper will change shortly after 00:00 of the next day</li>
            <li><b>once a week</b>: the wallpaper will change shortly after 00:00 on Sunday or Monday (it depends on your system settings) of the next week</li>
            <li><b>once a month</b>: the wallpaper will change shortly after 00:00 on the 1st of the next month</li>
        </ul>

        <h3>Buttons</h3>
        <ul>
            <li><b>Cancel</b>: resetting all changes after the <b>Edit</b> button. After that, you need to click on the image to set it as the background</li>
            <li><b>Edit</b>: allows you to crop the image if it is too large. After editing the image, you need to click it again to set it as the background<</li>
            <li><b>Next</b>: download a new image right now. To set new image as a background just click on it</li>
        </ul>

        <h3>Image</h3>
        Wallpaper preview. Click on it to set it as the background.


        <h2>Settings</h2>

        <h3>WiFi only</h3>
        Download new wallpapers only via WiFi (applies to the <b>Next</b> button as well).

        <h3>Change image on</h3>
        Allows you to choose whether the image will change: on the <i>homescreen</i> only, on the <i>lockscreen</i> only, or on <i>both</i>.<br/>
        Available only for Android 7.0 and higher.

        <h3>Screen resolution</h3>
        Affects the resolution at which images will be stored.
        For example, if you select the <b>normal</b> option, an image with a size of 15360*8640 and a weight of 6.5 MB will be compressed to a size of 1920*1080 and a weight of 289 Kb;
        if you select the <b>large</b> option, the same image will be compressed to a size of 3840*2160 and a weight of 791 Kb.
        <br>Does not affect the consumption of Internet traffic!
        <ul>
            <li><b>normal</b>: for normal resolution screens</li>
            <li><b>large</b>: for large resolution screens</li>
        </ul>

        <h3>Image sources</h3>
        You can choose which site you want to get images from:
        <ul>
            <li><b>Derpibooru</b>: https://derpibooru.org</li>
            <li><b>MLWP</b>: https://www.mylittlewallpaper.com</li>
        </ul>

        <h3>Derpibooru: search tags</h3>
        You can select search tags:
        <ul>
            <li><b>Wallpaper</b>: images tagged \"Wallpaper\" are in resolution suitable for desktop or mobile</li>
            <li><b>Safe</b>: when disabled, mature content is allowed</li>
        </ul>
        It is not recommended to disable the <b>Wallpaper</b> tag.

        <h3>Themes</h3>
        You can change the theme of the application.


        <h2>Additional menu</h2>
        <ul>
            <li><b>Copy link</b>: copy the image link to the clipboard</li>
            <li><b>Open in browser</b>: open the image on the site</li>
            <li><b>Save</b>: save the <i>original</i> version of the image to the gallery in \"My Random Pony\" folder. For this function to work, the app must be granted the necessary permission</li>
            <li><b>Share link</b>: send a link to an image</li>
        </ul>
        ]]>
    </string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_about">About</string>
    <string name="about_text">
        My Little Pony © Hasbro\n\n

        \"My Random Pony\" app is developed by Evgeniy Doctor. All rights reserved. ©\n
        The app was released on November 24, 2016.\n
        This is a third party application for accessing images on the following sites:
        - https://derpibooru.org/
        - http://mylittlewallpaper.com/
        \n\nThe developer is not responsible for the content of the images.\n\n

        Open source: https://github.com/EvgeniyDoctor/MyRandomPony\n\n

        Also listen to my music and mixes! https://www.youtube.com/channel/UCvPZd3PqeTxNciigUdmgRaQ\n\n

        Support me:\n
        - by buying my music: https://arklysis.bandcamp.com\n
        - by money transfer: https://paypal.me/evgeniydoctor
    </string>
    <string name="menu_item_copy">Copy link</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_link_error">Empty link</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_open">Open in browser</string>
    <string name="menu_item_copy_success">Copied</string>
    <string name="menu_item_save_success">Saved in gallery</string>
    <string name="menu_item_save_error">No image</string>
    <string name="menu_item_save_perm_error">Provide the permission to save the image in gallery</string>
    <string name="menu_item_app_share">Share this app</string>
    <string name="menu_item_app_rate">Rate this app</string>

    <string name="changing_wallpaper_progress_title">Changing</string>
    <string name="open_image_on_site">Open this image on the site</string>
    <string name="activity_about_title">About</string>
    <string name="activity_themes_title">Themes</string>
    <string name="theme_apply">Apply</string>
    <string name="error_unknown">An unknown error has occurred: %s</string>
    <string name="wallpaper_preview">wallpaper preview</string>

    <string name="screen_change">Change image on</string>
    <string name="screen_alert_title">Pick a screen</string>
    <string name="screen_both">both screens</string>
    <string name="screen_homescreen">homescreen</string>
    <string name="screen_lockscreen">lockscreen</string>

    <string name="settings">Settings</string>
    <string name="screen_size">Screen resolution</string>
    <string name="screen_size_alert_title">Pick a resolution</string>
    <string name="screen_size_normal">normal</string>
    <string name="screen_size_large">large</string>

    <string name="derpibooru_tags">Derpibooru: search tags</string>
    <string name="derpibooru_tags_alert_title">Select tags</string>

    <string name="image_source_alert_title">Select sources</string>
    <string name="image_source">Image sources</string>
    <string name="image_source_no_one_checked">First item selected</string>
</resources>
