<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_actions">
        <item
            android:id="@+id/menu_item_action_help"
            android:orderInCategory="100"
            android:title="@string/activity_help_title"
        />
        <item
            android:id="@+id/menu_item_action_about"
            android:orderInCategory="100"
            android:title="@string/activity_about_title"
        />
    </group>


    <group android:id="@+id/menu_group_app">
        <item
            android:id="@+id/menu_item_app_rate"
            android:orderInCategory="100"
            android:title="@string/menu_item_app_rate"
        />
        <item
            android:id="@+id/menu_item_app_share"
            android:orderInCategory="100"
            android:title="@string/menu_item_app_share"
        />
    </group>


    <group android:id="@+id/menu_group_image">
        <item android:title="@string/image">
            <menu>
                <item
                    android:id="@+id/menu_item_image_copy"
                    android:orderInCategory="100"
                    android:title="@string/menu_item_copy"
                />
                <item
                    android:id="@+id/menu_item_image_open"
                    android:orderInCategory="100"
                    android:title="@string/menu_item_open"
                />
                <item
                    android:id="@+id/menu_item_image_save"
                    android:orderInCategory="100"
                    android:title="@string/menu_item_save"
                />
                <item
                    android:id="@+id/menu_item_image_share"
                    android:orderInCategory="100"
                    android:title="@string/menu_item_share"
                />
            </menu>
        </item>
    </group>


</menu>
