<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_buttons_height"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="?attr/colorButton"
            android:textColor="?attr/colorTextElement"
            android:text="@string/settings_cancel_image" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="?attr/colorButton"
            android:textColor="?attr/colorTextElement"
            android:text="@string/settings_edit_image" />

        <Button
            android:id="@+id/btn_next"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="?attr/colorButton"
            android:textColor="?attr/colorTextElement"
            android:text="@string/settings_next_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/preview_wallpaper"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:visibility="gone"
            android:background="@drawable/image_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_preview" />
    </LinearLayout>
</LinearLayout>