<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:divider="@drawable/separator"
        android:showDividers="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <CheckBox
                android:layout_gravity="end"
                android:id="@+id/enable_checkbox"
                android:buttonTint="?attr/colorRadioCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"/>

            <FrameLayout
                android:id="@+id/layout_enable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/buttonBarButtonStyle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="?attr/colorText"
                    android:text="@string/settings_enable"/>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:divider="@drawable/separator"
        android:showDividers="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/text_frequency"
                android:layout_gravity="end"
                android:paddingEnd="@dimen/root_padding_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="?attr/colorTextValue"
                android:textSize="@dimen/text_value"
                />

            <FrameLayout
                android:id="@+id/layout_set_frequency"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="?attr/colorText"
                    android:text="@string/frequency_changing"
                    />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:showDividers="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <FrameLayout
                android:id="@+id/layout_settings"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="?attr/colorText"
                    android:text="@string/settings"
                    />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>